Lesson-22, work with Logs.

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.org.projectlombok>1.18.24</version.org.projectlombok>
         <version.org.junit.jupiter>5.9.1</version.org.junit.jupiter>
+        <version.org.apache.logging.log4j>2.7</version.org.apache.logging.log4j>
         <stakeholderFullName>Yevhen Osyshniuk</stakeholderFullName>
     </properties>
 
@@ -55,6 +56,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.9.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${version.org.apache.logging.log4j}</version>
         </dependency>
     </dependencies>
     <build>
