--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,10 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ua.ithillel</groupId>
-    <artifactId>ith-62aaf5f907905d280bc0679e</artifactId>
+    <groupId>ua.ithillel.ith-62aaf5f907905d280bc0679e.client</groupId>
+    <artifactId>application</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Hillel IT School Project</name>
+
+    <name>Hillel IT School Project Client</name>
     <description>Hillel IT School Project of group ith-62aaf5f907905d280bc0679e</description>
     <organization>
         <name>Hillel IT School</name>
@@ -28,6 +29,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.org.projectlombok>1.18.24</version.org.projectlombok>
         <version.org.junit.jupiter>5.9.1</version.org.junit.jupiter>
+        <version.org.apache.logging.log4j>2.7</version.org.apache.logging.log4j>
         <stakeholderFullName>Yevhen Osyshniuk</stakeholderFullName>
     </properties>
 
@@ -55,6 +57,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.9.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${version.org.apache.logging.log4j}</version>
         </dependency>
     </dependencies>
     <build>
