--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.org.projectlombok>1.18.24</version.org.projectlombok>
         <version.org.junit.jupiter>5.9.1</version.org.junit.jupiter>
+        <version.org.junit.jupiter.engine>5.9.0</version.org.junit.jupiter.engine>
+        <version.org.apache.maven.plugins.surefire>3.0.0-M7</version.org.apache.maven.plugins.surefire>
+        <version.org.apache.maven.plugins.war>3.3.2</version.org.apache.maven.plugins.war>
         <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
         <stakeholderFullName>YevhenOsyshniuk</stakeholderFullName>
     </properties>
@@ -55,7 +58,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.0</version>
+            <version>${version.org.junit.jupiter.engine}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -70,12 +73,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>${version.org.apache.maven.plugins.surefire}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.2</version>
+                <version>${version.org.apache.maven.plugins.war}</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
