--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <version.org.apache.maven.plugins.war>3.3.2</version.org.apache.maven.plugins.war>
         <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
         <version.org.apache.logging.log4j>2.19.0</version.org.apache.logging.log4j>
+        <version.org.springframework>6.0.3</version.org.springframework>
         <stakeholderFullName>YevhenOsyshniuk</stakeholderFullName>
     </properties>
 
@@ -72,6 +73,11 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>${version.org.apache.logging.log4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${version.org.springframework}</version>
         </dependency>
     </dependencies>
     <build>
