--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
         <version.org.apache.logging.log4j>2.19.0</version.org.apache.logging.log4j>
         <version.org.springframework>6.0.3</version.org.springframework>
+        <version.javax.annotation>1.3.2</version.javax.annotation>
         <stakeholderFullName>YevhenOsyshniuk</stakeholderFullName>
     </properties>
 
@@ -78,6 +79,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${version.org.springframework}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${version.javax.annotation}</version>
         </dependency>
     </dependencies>
     <build>
