--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <version.org.apache.logging.log4j>2.19.0</version.org.apache.logging.log4j>
         <version.org.springframework>6.0.3</version.org.springframework>
         <version.javax.annotation>1.3.2</version.javax.annotation>
+        <version.org.postgresql>42.5.1</version.org.postgresql>
         <stakeholderFullName>YevhenOsyshniuk</stakeholderFullName>
     </properties>
 
@@ -84,6 +85,16 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>${version.javax.annotation}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${version.org.springframework}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${version.org.postgresql}</version>
         </dependency>
     </dependencies>
     <build>
