--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,11 @@
         <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
         <version.org.apache.logging.log4j>2.19.0</version.org.apache.logging.log4j>
         <version.org.springframework>6.0.3</version.org.springframework>
+        <version.org.springframework.spring-webmvc>6.0.4</version.org.springframework.spring-webmvc>
+        <version.org.springframework.spring-orm>6.0.4</version.org.springframework.spring-orm>
         <version.javax.annotation>1.3.2</version.javax.annotation>
         <version.org.postgresql>42.5.1</version.org.postgresql>
+        <version.org.hibernate>5.6.10.Final</version.org.hibernate>
         <stakeholderFullName>YevhenOsyshniuk</stakeholderFullName>
     </properties>
 
@@ -95,6 +98,21 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${version.org.postgresql}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${version.org.hibernate}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${version.org.springframework.spring-webmvc}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${version.org.springframework.spring-orm}</version>
         </dependency>
 
     </dependencies>
