--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,19 @@
     <groupId>ua.ithillel</groupId>
     <artifactId>ith-62aaf5f907905d280bc0679e</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+
     <name>Hillel IT School Project</name>
     <description>Hillel IT School Project of group ith-62aaf5f907905d280bc0679e</description>
     <organization>
         <name>Hillel IT School</name>
         <url>https://lms.ithillel.ua/</url>
     </organization>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.0.1</version>
+    </parent>
 
     <developers>
         <developer>
@@ -27,76 +33,29 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.org.projectlombok>1.18.24</version.org.projectlombok>
-        <version.org.junit.jupiter>5.9.1</version.org.junit.jupiter>
-        <version.org.junit.jupiter.engine>5.9.0</version.org.junit.jupiter.engine>
         <version.org.apache.maven.plugins.surefire>3.0.0-M7</version.org.apache.maven.plugins.surefire>
         <version.org.apache.maven.plugins.war>3.3.2</version.org.apache.maven.plugins.war>
-        <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
-        <version.org.apache.logging.log4j>2.19.0</version.org.apache.logging.log4j>
-        <version.org.springframework>6.0.3</version.org.springframework>
-        <version.javax.annotation>1.3.2</version.javax.annotation>
-        <version.org.postgresql>42.5.1</version.org.postgresql>
         <stakeholderFullName>YevhenOsyshniuk</stakeholderFullName>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${version.org.projectlombok}</version>
-            <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${version.org.junit.jupiter}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${version.org.junit.jupiter}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${version.org.junit.jupiter.engine}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>${version.jakarta.servlet}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${version.org.apache.logging.log4j}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${version.org.springframework}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>${version.javax.annotation}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${version.org.springframework}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>${version.org.postgresql}</version>
-        </dependency>
-
     </dependencies>
     <build>
         <plugins>
